<resources>
    <string name="app_name">ShopListV2</string>
    <string name="app_scheme">shoplist</string>
    <string name="authentication_deeplink">authentication</string>
    <string name="home_deeplink">home</string>
    <string name="check_list_detail_deeplink">check_list_detail</string>
    <string name="category_detail_host">category_detail</string>
    <string name="check_list_host">check-list</string>
    <string name="check_list_new_path">/new</string>
    <string name="see_more_products">Ver mais</string>
    <string name="register_name_input_hint">Nome</string>
    <string name="register_lastname_input_hint">Sobrenome</string>
    <string name="register_email_input_hint">E-mail</string>
    <string name="register_pwd_input_hint">Senha</string>
    <string name="register_pwd_confirmation_input_hint">Confirmacao da senha</string>
    <string name="register_password_constraint_1">Contém letras em maiusculo e minusculo</string>
    <string name="register_password_constraint_2">Contém números</string>
    <string name="register_password_constraint_3">Contém simbolos</string>
    <string name="register_password_constraint_5">As senhas devem ser iguais</string>
    <string name="register_next_button">Continuar</string>
    <string name="register_password_constraint_4">Mais de 8 caracteres</string>
    <string name="register_invalid_email">E-mail inválido</string>
    <string name="register_invalid_phone_number">Telefone inválido</string>
    <string name="register_phone_number_hint">Telefone</string>
    <string name="register_conflict_phone_number">Telefone já utilizado por outro usuário</string>
    <string name="register_invalid_parameter">Dados incorretos. Verifique e tente novamente</string>
    <string name="register_last_name_invalid">Sobrenome inválido. Verifique e tente novamente</string>
    <string name="register_password_invalid">Senha inválida. Verifique e tente novamente</string>
    <string name="register_username_already_exists">Já existe uma conta com o mesmo e-mail. Verifique e tente novamente</string>
    <string name="register_unknown">Não foi possível prosseguir com o registro, tente novamente.</string>
    <string name="register_confirm_code_mismatch">Código inválido</string>
    <string name="register_confirm_expired_code">Código expirado</string>
    <string name="register_confirm_unknown">Algo deu errado. Tente novamente</string>
    <string name="app_title">Shop List</string>
    <string name="app_slogan">Organize e faça suas compras, simples e rápido</string>
    <string name="login_username_hint">E-mail</string>
    <string name="login_password_hint">Senha</string>
    <string name="login_btn_text">Login</string>
    <string name="register_btn_txt">Registro</string>
    <string name="login_input_username_exception">Usuário inválido ou não encontrado</string>
    <string name="login_input_password_exception">Senha inválida</string>
    <string name="login_input_not_authorized">Não autorizado</string>
    <string name="login_input_unknown">Erro desconhecido. Tente novamente.</string>
    <string name="login_confirm_username_invalid">Usuário inválido</string>
    <string name="login_confirmation_code_invalid">Código inválido</string>
    <string name="login_confirm_code_expired">Código expirado</string>
    <string name="login_confirm_unknown_error">Erro desconhecido. Tente novamente.</string>
    <string name="create_list">Criar lista</string>
</resources>