<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_name_input_hint"
        app:layout_constraintTop_toTopOf="parent"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/lastname_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_lastname_input_hint"
        app:layout_constraintTop_toBottomOf="@id/name_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_email_input_hint"
        app:layout_constraintTop_toBottomOf="@id/lastname_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/phone_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_phone_number_hint"
        app:layout_constraintTop_toBottomOf="@id/email_layout"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pwd_input_hint"
        app:layout_constraintTop_toBottomOf="@id/phone_number_layout"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_constraint_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_constraint_1"
        app:layout_constraintTop_toBottomOf="@id/password_layout"
        />

    <TextView
        android:id="@+id/password_constraint_2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_constraint_2"
        app:layout_constraintTop_toBottomOf="@id/password_constraint_1"
        />

    <TextView
        android:id="@+id/password_constraint_3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_constraint_3"
        app:layout_constraintTop_toBottomOf="@id/password_constraint_2"
        />

    <TextView
        android:id="@+id/password_constraint_4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_constraint_4"
        app:layout_constraintTop_toBottomOf="@id/password_constraint_3"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_confirm_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_pwd_confirmation_input_hint"
        app:layout_constraintTop_toBottomOf="@id/password_constraint_4"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/password_constraint_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register_password_constraint_5"
        app:layout_constraintTop_toBottomOf="@id/password_confirm_layout"
        />

    <Button
        android:id="@+id/continue_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register_next_button"
        android:enabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>